--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,12 @@
-@import 'partials/layout';
-@import 'partials/theme';
-@import 'partials/result';
-@import 'partials/filters';
-@import 'partials/map';
-
-//todo rename these to match appropriate components
+// Vendor
+@import './vendor/fonts';
+@import './vendor/normalize';
+// Partials
+@import './partials/variables';
+@import './partials/layout';
+@import './partials/theme';
+@import './partials/app';
+@import './partials/filter';
+@import './partials/mapview';
+@import './partials/preview';
+@import './partials/searchfilter';
