--- a/src/styles/partials/_theme.scss
+++ b/src/styles/partials/_theme.scss
@@ -7,6 +7,8 @@
 html { font-size: 10px; }
 
 body {
+	max-width: $site-absolute-max-width;
+	margin: 0 auto;
     font-family: $font;
 	font-weight: normal;
 	background: $lightgrey;
@@ -17,7 +19,8 @@ body {
 #main {
     display: flex;
 	flex-direction: column;
-	max-width: 2000px;
+	max-width: $site-max-width;
+	margin: 0 auto;
 }
 
 ul {
