--- a/src/styles/partials/_layout.scss
+++ b/src/styles/partials/_layout.scss
@@ -1,24 +1,36 @@
 #main {
     display: flex;
-    // flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
 	max-width: $site-max-width;
     margin: 0 auto;
+    overflow-x: hidden;
+    position: relative;
+    height:100vh;
+    
     @include tablet {
         flex-wrap: wrap;
     }
     
     aside.search-dropdown {
     // Mobile hamburger menu
-        position: absolute;
         width: 100%;
         height: 100vh;
+        position: absolute;
         @include tablet {
+            position: unset;
+            flex: 4;
+            height: auto;
+        }
+        @include desktop {
             flex: 3;
         }
     }
     main.article-container {
         @include tablet {
+            flex: 6;
+        }
+        @include desktop {
             flex: 7;
         }
     }
