renamed app -> article.scss. Further styling and re-arrangement of data

--- a/src/style.scss
+++ b/src/style.scss
@@ -6,7 +6,7 @@
 // Partials
 @import './styles/partials/layout';
 @import './styles/partials/theme';
-@import './styles/partials/app';
+@import './styles/partials/article';
 @import './styles/partials/filter';
 @import './styles/partials/mapview';
 @import './styles/partials/preview';
