--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -4,6 +4,8 @@ $lightgrey: #e8e6df;
 $off-white: #faf4e9;
 $white: #ffffff;
 $red: #ba0c2f;
+$highlight-yellow: #f7f460;
+$green: #008000;
 
 // Font
 $font: 'HKGrotesk', sans-serif;
