--- a/src/styles/partials/_preview.scss
+++ b/src/styles/partials/_preview.scss
@@ -1,6 +1,8 @@
 main.article-container {
+    max-width: calc(100vw - 4rem);
     width: 100%;
-    height:100%;
+    min-height:100%;
+    height: auto;
     padding: 1rem;
     margin:2rem;
     background: $off-white;
@@ -15,17 +17,33 @@ main.article-container {
     }
     .preview-header {
         width: 90%;
-        .preview-results {
-            display: inline-block;
+        ul.preview-results {
+            display: block;
             li {
                 padding-bottom: 2rem;
+                .access-level-icon {
+                    .fa-lock + span{ color: $red; }
+                    .fa-lock-open + span{ color: $green; }
+                }
                 a {
                     display: inline-block;
                     border: solid 2px $grey;
                     padding: 0.5rem;
-                    .preview-view-full {
-    
+                    &:hover {
+                        background: $grey;
+                        .preview-view-full {
+                            color: $off-white
+                        }
                     }
+                }
+                .preview-title, .preview-description {
+                    .highlight { 
+                        padding: 0;
+                        background: $highlight-yellow;
+                    }
+                }
+                .preview-title, .preview-description, .preview-date-published {
+                    padding-bottom: 2rem;
                 }
             }
         }
