--- a/src/styles/partials/_preview.scss
+++ b/src/styles/partials/_preview.scss
@@ -17,10 +17,45 @@ main.article-container {
     }
     .preview-header {
         width: 90%;
+        .sort-selection {
+            .sort-selected {
+                display: inline-block;
+                height: 6rem;
+                padding: 1.7rem;
+                margin-bottom: 2rem;
+                border: solid 1px black;
+                cursor: pointer;
+                p, span {
+                    display: inline-block;
+                }
+                p { padding-right: 1rem; }
+                .sort-dropdown-arrow {
+                    position: relative;
+                    top: 2px;
+                    padding-left: 1rem;
+                }
+            }
+            .sort-dropdown {
+                display: none;
+                width: 16rem;
+                position: absolute;
+                margin-top: -2rem;
+                background: $lightgrey;
+                border: solid 1px black;
+                li {
+                    padding: 1.7rem;
+                    cursor: pointer;
+                    &:hover { background: $lightgrey; }
+                    p { padding: 0; }
+                }
+                &.active { display: block; }
+            }
+        }
         ul.preview-results {
             display: block;
             li {
-                padding-bottom: 2rem;
+                padding: 2rem 0;
+                border-top: solid 1px $grey;
                 .access-level-icon {
                     .fa-lock + span{ color: $red; }
                     .fa-lock-open + span{ color: $green; }
