added logic for handling sorting by date. Added some minor fixes

--- a/src/styles/partials/_preview.scss
+++ b/src/styles/partials/_preview.scss
@@ -40,7 +40,7 @@ main.article-container {
                 width: 16rem;
                 position: absolute;
                 margin-top: -2rem;
-                background: $lightgrey;
+                background: $off-white;
                 border: solid 1px black;
                 li {
                     padding: 1.7rem;
