--- a/src/styles/partials/_theme.scss
+++ b/src/styles/partials/_theme.scss
@@ -65,6 +65,7 @@ h1 {
 			font-size: 1.6rem;
 			color: $off-white;
 			border: solid 2px white;
+			&:hover { background: darken($red, 20%)}
 		}
 		@include tablet { display: none; }
 	}
